Correctly check for trunk merge branch when running forever

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,6 +12,8 @@ jobs:
   pr:
     name: Run Pull Request checks
     runs-on: ubuntu-latest
+    env:
+      BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
     steps:
       - name: Checkout code
@@ -27,5 +29,5 @@ jobs:
           PATTERNS: test/run_forever*.txt
 
       - name: Run forever
-        if: steps.run_forever.outputs.diff && contains('trunk-merge', github.ref)
+        if: steps.run_forever.outputs.diff && startsWith(env.BRANCH_NAME, 'trunk-merge')
         run: sleep 180s
